# student-record-information

./: Cargo.toml
contract/: Cargo.toml  student_info.rs
impls/: data.rs  events.rs  mod.rs  student_data.rs
traits/: mod.rs
