[package]
name = "student_info"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }

openbrush = { version = "4.0.0-beta.1", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = [
    "psp22",
] }
contract = { path = "contract/student_info", default-features = false }


[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
name = "global"
path = "global.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "contract/std",
]
ink-as-dependency = ["std"]
e2e-tests = []

# [profile.release]
# overflow-checks = false
